--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Warna utama (ungu) -->
-    <color name="purple_200">#BB86FC</color>
-    <color name="purple_500">#6200EE</color>
-    <color name="purple_700">#3700B3</color>
-
-    <!-- Warna sekunder (teal) -->
-    <color name="teal_200">#03DAC5</color>
-    <color name="teal_700">#018786</color>
-
-    <!-- Warna standar -->
+    <!-- Warna utama -->
+    <color name="green_primary">#0C3B2E</color>
+    <color name="green_variant">#6D9773</color>
+    <color name="yellow_secondary">#FFBA00</color>
+    <color name="orange_variant">#B46617</color>
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="gray">#808080</color>
+
+    <!-- Warna outline TextInputLayout -->
+    <array name="input_stroke_color">
+        <item>@color/green_primary</item> <!-- fokus -->
+        <item>@color/green_variant</item> <!-- default -->
+    </array>
 </resources>
