--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Tema utama aplikasi -->
-    <style name="Theme.App" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.App" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Warna utama -->
         <item name="colorPrimary">#0C3B2E</item>
         <item name="colorPrimaryVariant">#6D9773</item>
@@ -12,6 +12,10 @@
         <item name="colorSecondary">#FFBA00</item>
         <item name="colorSecondaryVariant">#B46617</item>
         <item name="colorOnSecondary">@android:color/black</item>
+
+        <!-- Warna fokus & outline komponen -->
+        <item name="colorControlActivated">#0C3B2E</item>
+        <item name="colorOutline">#6D9773</item>
 
         <!-- Status bar -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
@@ -29,8 +33,19 @@
         <item name="colorSecondaryVariant">#B46617</item>
         <item name="colorOnSecondary">@android:color/black</item>
 
+        <!-- Warna fokus & outline komponen -->
+        <item name="colorControlActivated">#0C3B2E</item>
+        <item name="colorOutline">#6D9773</item>
+
         <!-- Status bar -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+    </style>
+
+    <!-- Tema overlay untuk Toolbar -->
+    <style name="ThemeOverlay.App.Toolbar" parent="ThemeOverlay.MaterialComponents.Dark.ActionBar">
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:colorControlNormal">@android:color/white</item>
     </style>
 
 </resources>
