--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#000000</color>
     <color name="white">#FFFFFF</color>
     <color name="gray">#808080</color>
+    <color name="my_custom_status_bar">#0C3B2E</color>
 
     <!-- Warna outline TextInputLayout -->
     <array name="input_stroke_color">
