--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -67,8 +67,8 @@
                 app:boxCornerRadiusBottomStart="16dp"
                 app:boxCornerRadiusTopEnd="16dp"
                 app:boxCornerRadiusTopStart="16dp"
-                app:boxStrokeColor="@color/purple_500"
-                app:hintTextColor="@color/purple_200">
+                app:boxStrokeColor="@color/green_primary"
+                app:hintTextColor="@color/green_primary">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/reg_username_input"
@@ -89,8 +89,8 @@
                 app:boxCornerRadiusBottomStart="16dp"
                 app:boxCornerRadiusTopEnd="16dp"
                 app:boxCornerRadiusTopStart="16dp"
-                app:boxStrokeColor="@color/purple_500"
-                app:hintTextColor="@color/purple_200">
+                app:boxStrokeColor="@color/green_primary"
+                app:hintTextColor="@color/green_primary">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/reg_password_input"
@@ -112,8 +112,8 @@
                 app:boxCornerRadiusBottomStart="16dp"
                 app:boxCornerRadiusTopEnd="16dp"
                 app:boxCornerRadiusTopStart="16dp"
-                app:boxStrokeColor="@color/purple_500"
-                app:hintTextColor="@color/purple_200">
+                app:boxStrokeColor="@color/green_primary"
+                app:hintTextColor="@color/green_primary">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/reg_email_input"
