--- a/app/src/main/res/layout/dialog_edit_account.xml
+++ b/app/src/main/res/layout/dialog_edit_account.xml
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:padding="20dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#6D9773"
-    android:textColor="@android:color/white">
+    android:background="#FFFFFF"
+    android:orientation="vertical"
+    android:padding="20dp"
+    android:textColor="@color/gray">
 
 
     <EditText
         android:id="@+id/et_edit_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
         android:hint="Nama"
         android:inputType="textPersonName"
-        android:layout_marginBottom="12dp"
-        android:textColor="@android:color/white"
-        />
+        android:textColor="@android:color/white" />
 
     <EditText
         android:id="@+id/et_edit_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Email"
-        android:textColor="@android:color/white"
         android:inputType="textEmailAddress"
-        />
+        android:textColor="@android:color/white" />
 
 </LinearLayout>
