--- a/app/src/main/res/layout/dialog_edit_account.xml
+++ b/app/src/main/res/layout/dialog_edit_account.xml
@@ -5,7 +5,7 @@
     android:background="#FFFFFF"
     android:orientation="vertical"
     android:padding="20dp"
-    android:textColor="@color/gray">
+    android:textColor="@color/black">
 
 
     <EditText
@@ -15,7 +15,7 @@
         android:layout_marginBottom="12dp"
         android:hint="Nama"
         android:inputType="textPersonName"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/black" />
 
     <EditText
         android:id="@+id/et_edit_email"
@@ -23,6 +23,6 @@
         android:layout_height="wrap_content"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/black" />
 
 </LinearLayout>
