--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -97,7 +97,8 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="24dp"
                 android:gravity="end"
-                android:text="Forgot password?" />
+                android:text="Forgot password?"
+                android:textColor="@android:color/darker_gray" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/login_button"
@@ -107,7 +108,7 @@
                 android:paddingVertical="12dp"
                 android:text="LOG IN"
                 android:textAllCaps="false"
-                android:textColor="@android:color/white"
+                android:textColor="@android:color/darker_gray"
                 app:backgroundTint="#6D9773"
                 app:cornerRadius="16dp"
                 app:elevation="6dp" />
