--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,6 @@
     android:background="#0C3B2E"
     tools:context=".RegisterActivity">
 
-    <!-- White rounded bottom half with elevation -->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/bottom_half"
         android:layout_width="0dp"
@@ -40,7 +39,7 @@
                 android:textSize="34sp"
                 android:textStyle="bold" />
 
-            <!-- Role Selector -->
+            <!-- milih role -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -57,7 +56,7 @@
                 android:entries="@array/account_types"
                 android:layout_marginBottom="16dp" />
 
-            <!-- Username input -->
+            <!-- input username -->
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
@@ -79,7 +78,7 @@
                     android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Password input -->
+            <!-- buat input password -->
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
@@ -150,7 +149,7 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-    <!-- Top title (same as login) -->
+    <!-- Top title -->
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
