--- a/app/src/main/res/layout/fragment_detail_pesanan.xml
+++ b/app/src/main/res/layout/fragment_detail_pesanan.xml
@@ -67,7 +67,7 @@
             android:background="#DDDDDD"
             android:layout_marginVertical="16dp"/>
 
-        <!-- ⭐ Bagian Review -->
+        <!-- Bagian Review -->
         <TextView
             android:text="Beri Ulasan:"
             android:textSize="16sp"
