--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,14 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-<!--    <com.google.android.material.tabs.TabLayout-->
-<!--        android:id="@+id/tabLayout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:tabIndicatorColor="@color/purple_500"-->
-<!--        app:tabSelectedTextColor="@color/purple_500"-->
-<!--        app:tabTextColor="@android:color/darker_gray"/>-->
-
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
@@ -20,7 +12,7 @@
         android:layout_weight="1"/>
 </LinearLayout>
 
-
+    <!--    versi lama -->
     <!--<?xml version="1.0" encoding="utf-8"?>-->
     <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
     <!--    xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
