--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -108,7 +108,7 @@
                 android:paddingVertical="12dp"
                 android:text="LOG IN"
                 android:textAllCaps="false"
-                android:textColor="@android:color/darker_gray"
+                android:textColor="@android:color/white"
                 app:backgroundTint="#6D9773"
                 app:cornerRadius="16dp"
                 app:elevation="6dp" />
