--- a/app/src/main/res/layout/item_product_seller.xml
+++ b/app/src/main/res/layout/item_product_seller.xml
@@ -55,7 +55,7 @@
                 android:textColor="@android:color/darker_gray" />
         </LinearLayout>
 
-        <!-- Tombol aksi (Edit & Hapus) -->
+        <!-- Tombol edit sama hapus) -->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
