--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,7 +7,6 @@
     android:background="#0C3B2E"
     tools:context=".LoginActivity">
 
-    <!-- White rounded bottom half with elevation -->
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/bottom_half"
         android:layout_width="0dp"
@@ -62,7 +61,6 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-
             <!-- Password input -->
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -86,10 +84,8 @@
                     android:textColor="@color/black" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!-- Tombol Login -->
 
             <!-- Container horizontal buat Login atau Sign up -->
-
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
@@ -100,6 +96,7 @@
                 android:text="Forgot password?"
                 android:textColor="@android:color/darker_gray" />
 
+<!--            tombol login-->
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/login_button"
                 android:layout_width="match_parent"
@@ -139,7 +136,7 @@
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
-
+<!--teks umkm manager-->
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
